# 1of10

./: .gitignore  README.md  dev.sh  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/web/: .env.development  index.html  openapi.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  turbo.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/api/: api-schema.ts  index.ts  thumbnail.contract.ts
apps/web/src/pages/: home.tsx  layout.tsx
apps/web/src/pages/home/: index.tsx  loading-error.tsx  thumbnail-modal.tsx
apps/web/src/router/: index.tsx
backend/: .env  README.md  alembic.ini  dev.sh  package.json  pyproject.toml  server.py  setup.sh
backend/alembic/: env.py
backend/alembic/versions/: 02e09051d050_initial_migration.py  93463c92da54_initial_migration.py
backend/app/: db.py
backend/app/api/: router.py
backend/app/api/endpoints/: crud_api.py  thumbnail.py  thumbnail_score.py
backend/app/crud/: __init__.py  base.py  crud_thumbnail.py  crud_thumbnail_score.py
backend/app/groq/: __init__.py  llama.py
backend/app/models/: base.py  thumbnail.py  thumbnail_score.py
backend/app/schema/: thumbnail.py  thumbnail_score.py
