[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alex <alex.borodach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
python-multipart = "^0.0.12"
uvicorn = "^0.31.0"
alembic = "^1.13.3"
mysql-connector-python = "^9.0.0"
groq = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
